test/files/run/stub-errors/TypeDef.check
error: newSource1.scala:3: missing or invalid dependency detected while loading class file 'E.class'.
Could not access type A in package stuberrors,
because it (or its dependencies) are missing. Check your build definition for
missing or conflicting dependencies. (Re-run with `-Ylog-classpath` to see the problematic classpath.)
A full rebuild may help if 'E.class' was compiled against an incompatible version of stuberrors.
    class C {
          ^
error: newSource1.scala:4: overriding type D in class B with bounds <: stuberrors.A;
 type D has incompatible type
      new B { type D = E }
                   ^
error: newSource1.scala:4: missing or invalid dependency detected while loading class file 'B.class'.
Could not access type A in package stuberrors,
because it (or its dependencies) are missing. Check your build definition for
missing or conflicting dependencies. (Re-run with `-Ylog-classpath` to see the problematic classpath.)
A full rebuild may help if 'B.class' was compiled against an incompatible version of stuberrors.
      new B { type D = E }
          ^